# asksharon_ai_blueprint

./: .cursorrules  .env.example  .gitignore  DEVELOPER_ONBOARDING.md  EMAIL_CALENDAR_SETUP.md  ENVIRONMENT_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_COMPLETE.md  PROJECT_README.md  README.md  SESSION_SUMMARY.md  SETUP_CHECKLIST.md  STARTUP_GUIDE.md  SUPABASE_SETUP.md  TUTORIAL.md  additional-tables.sql  claude.md  complete-schema.sql  env-setup.sh  fix-constraints.sql  fix-database-constraints.sql  fix-foreign-key.sql  fix-user-profiles.sql  logging.config.js  missing-tables.sql  mypy.ini  package-lock.json  package-lock.json.backup  package.json  playwright.config.ts  principles.md  pyproject.toml  pytest.ini  pytest_e2e.ini  requirements-dev.txt  requirements.txt  simple-test.js  start.sh  supabase-schema.sql  sync-tables.sql  (+4 more)
.claude/: quality-gates.yaml  subagents.yaml  task-templates.yaml
.github/workflows/: ci.yml
assistant/: __init__.py
assistant/configs/: module_registry.yaml
assistant/core/: __init__.py  context_manager.py  orchestrator.py  scheduler.py  supabase_memory.py
assistant/data/: seeds.json
assistant/modules/: __init__.py
assistant/modules/behavioural_intelligence/: __init__.py  bil_analytics.py  bil_cbt.py  bil_config.py  bil_daily_reflection.py  bil_eisenhower.py  bil_energy.py  bil_habits.py  bil_pomodoro.py  bil_rituals.py  bil_weekly_review.py  main.py
assistant/modules/calendar/: helpers.py  main.py
assistant/modules/email/: __init__.py  database.py  email_parser.py  event_detector.py  main.py  openai_service.py
assistant/modules/email_assistant/: rate_limiter.py
assistant/modules/fitness/: assessment.py  equipment.py  exercise_seeds.py  goals.py  training_intelligence.py  (+6 more)
assistant_api/app/: client 2.py  client.py
config/: .env.example  coach_config.yaml  env_manager.py
database/: daily-checkins.sql  schema.sql  seed-data.sql
docs/: ARCHITECTURE.md  CALENDAR_INTEGRATION_COMPLETE.md  CLAUDE.md  DECISIONS.md  ENGINEERING_GUIDELINES.md  FUTURE_REFACTOR.md  GMAIL_SETUP.md  IMPLEMENTATION_CONTROL_PLAN.md  IMPLEMENTATION_LOG.md  MEMORY_INTEGRATION.md  MEMORY_QUICKSTART.md  PRINCIPLES.md  PROGRESS.md  PROGRESS_REPORTS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  ROADMAP.md  TESTING_STANDARDS.md  TEST_RESULTS.md  UI_TESTING_STANDARDS.md  architecture.puml  phase1_implementation_plan.md  prompt_templates.md  system_design_blueprint.md
planning/: progress.yaml
planning/phase_1_mvp/: acceptance_tests.md  goal.md  tasks.md
planning/phase_2_behaviour/: WEEK1_COMPLETE.md  WEEK1_PLAN.md  acceptance_tests.md  goal.md  tasks.md
planning/phase_3_planner/: acceptance_tests.md  goal.md  tasks.md
planning/phase_4.5_fitness_enhanced/: CHANGELOG.md  acceptance_tests.md  data_design.md  goal.md  tasks.md
planning/phase_4_fitness/: acceptance_tests.md  goal.md  tasks.md
planning/phase_5_expansion/: acceptance_tests.md  goal.md  tasks.md
scripts/: README.md  approve_frontend_changes.sh  auto-debug.js  claude-debug.js  direct-fix.js  fix-database.js  fix-dependencies.sh  fix-user-profiles.js  health_check.py  migrate_email_schema.py  migrate_goal_calendar_separate_tables.py  pre-commit-check.sh  pre-commit.sh  progress_report.py  run-white-screen-tests.js  setup-database.js  setup-missing-tables.js  setup-tables.js  setup.sh  setup_venv.sh  simple-test.js  start.js  start.sh  status.sh  stop.sh  test-db.js  test-integration.js  test-protocol.sh  test_all.sh  test_e2e.py  test_frontend.py  test_gmail_connection.py  test_milestone.sh  validate_env.py
sessions/2025-09-28-1621/: checklist.md  learning_log_entry.md  principles_tracker.md
sessions/2025-09-28-1622/: learning_log_entry.md
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: useDashboardData.ts  useGoogleAuth.ts  useUser.ts
src/lib/: calendar-ai.ts.disabled  calendar.ts  dashboard.ts  database.ts  database.ts.backup  email-ai.ts.disabled  error-handler.ts  gmail.ts  google-direct.ts  logger.ts  openai.ts  supabase.ts  test-utils.ts  utils.ts  uuid.ts
src/types/: index.ts  next-auth.d.ts  speech-simple.d.ts
tests/: README.md  app-health.spec.ts  auth-test.spec.ts  automated-monitoring.spec.ts  cache-scenarios.spec.ts  conftest.py  debug-automation.spec.ts  enhanced-debug.spec.ts  loading-transitions.spec.ts  network-conditions.spec.ts  session-diagnosis.spec.ts  test-helpers.ts  test_button_clicks.py  test_frontend_e2e.py  visual-regression.spec.ts  white-screen-detection.spec.ts
tests/unit/: test_calendar_helpers.py  test_fitness_phase45.py
tools/: check_architecture.py
(+59 files in other folders)
