# ==============================================
# Python Project Configuration (Universal Template)
# ==============================================
# Modern Python tooling configuration
# Customize project name, version, and dependencies for your project

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asksharon_ai_blueprint"  # Will be replaced during project creation
version = "0.1.0"
description = "A new Python project from universal template"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your-email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ==============================================
# Black Configuration (Code Formatter)
# ==============================================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | build
  | dist
  | node_modules
)/
'''

# ==============================================
# Ruff Configuration (Fast Linter & Formatter)
# ==============================================
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (catch print statements)
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by Black)
    "S101",  # Use of assert (OK in tests)
    "T201",  # Print statements (OK for CLI output)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values and assertions
"tests/**/*.py" = ["S101", "PLR2004"]
"**/test_*.py" = ["S101", "PLR2004"]

# Scripts can use print statements
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint.mccabe]
# Maximum allowed complexity
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

# ==============================================
# Pytest Configuration
# ==============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that call external APIs",
]

# ==============================================
# Coverage Configuration
# ==============================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ==============================================
# MyPy Configuration (Type Checking - Optional)
# ==============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
